Enhance index.html with new content and links
Updated the HTML structure to include additional sections and social media links.

--- a/modulo cinco/index.html
+++ b/modulo cinco/index.html
@@ -11,16 +11,44 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Formacao</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Tema</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="Gustavo Guanabara" class="foto">
+            <h1>Gustavo Guanabara</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatibus dignissimos minus, illum ratione fugiat illo facilis iure sapiente a quas at hic delectus saepe, aut provident itaque officia vel. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos excepturi veniam aut? Beatae non architecto et hic magni temporibus eos qui nam error perspiciatis, veritatis quos nobis quas praesentium vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur saepe, consequuntur esse maxime repudiandae neque iure debitis omnis dolorum est. Dolore enim quia maxime minus. Eligendi praesentium eum minus? Mollitia?</p>
+            <div id="social">
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/gustavoguanabara/#" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.cursoemvideo.com" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i></a>
+            </div>
+        </section>
+        <section id="detalhes">
+            <article id="video">
+                <h2>Deixe-me apresentar</h2>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/vdWfSWA_BQ?s1=HR9UWum9pvmAIV65" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </article> <!-- fim article#video -->
+            <article id="skills">
+                <h2><i class="fa-solid fa-brain"></i> Minhas skills</h2>
+            </article> <!-- fim article#skills -->
+            <article id="formacao">
+                <h2><i class="fa-solid fa-graduation-cap"></i> Formacao</h2>
+            </article> <!-- fim article#formacao -->
+            <article id="projetos">
+                <h2><i class="fa-solid fa-trowel-bricks"></i> Meus projetos</h2>
+            </aricle> <!-- fim article#projetos -->
+        </section>
     </main>
     <footer>
 
