--- a/modulo cinco/index.html
+++ b/modulo cinco/index.html
@@ -41,6 +41,67 @@
             </article> <!-- fim article#video -->
             <article id="skills">
                 <h2><i class="fa-solid fa-brain"></i> Minhas skills</h2>
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> 
+                                HTML5
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%"></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> 
+                                CSS3
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%"></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> 
+                                JavaScript
+                            </span>
+                            <span class="porcent">
+                                56%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 56%"></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> 
+                                Trabalho em equipe
+                            </span>
+                            <span class="porcent">
+                                98%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 98%"></div>
+                        </div>
+                    </div>
+                </div>
             </article> <!-- fim article#skills -->
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formacao</h2>
@@ -55,3 +116,4 @@
     </footer>
 </body>
 </html>
+
