--- a/modulo cinco/index.html
+++ b/modulo cinco/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
     <link rel="stylesheet" href="estilos/style.css">
+    <script src="https://kit.fontawesome.com/af61149184.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -116,4 +117,5 @@
     </footer>
 </body>
 </html>
+
 
