adicao da secao de formacao

--- a/modulo cinco/index.html
+++ b/modulo cinco/index.html
@@ -106,6 +106,25 @@
             </article> <!-- fim article#skills -->
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i> Formacao</h2>
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">1991 - 1994</p>
+                        <h3 class="instituicao">Escola tecnica carioca</h3>
+                        <p class="titulacao">Tecnico em informatica</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">1995 - 2000</p>
+                        <h3 class="instituicao">Instituto Superior em Tecnologia</h3>
+                        <p class="titulacao">Bacharelado em Ciencia da computacao</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">1998 - 2000</p>
+                        <h3 class="instituicao">Centro de Professores</h3>
+                        <p class="titulacao">Licenciatura em Informatica</p>
+                    </div>
+                </div>
             </article> <!-- fim article#formacao -->
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i> Meus projetos</h2>
@@ -117,5 +136,6 @@
     </footer>
 </body>
 </html>
+
 
 
