--- a/modulo cinco/index.html
+++ b/modulo cinco/index.html
@@ -128,14 +128,56 @@
             </article> <!-- fim article#formacao -->
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i> Meus projetos</h2>
+                <div id="projeto-container">
+
+                    <div class="projeto"> <!--projeto um-->
+                        <img src="imagens/projeto-01-videos.jpg" alt="projeto um" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de videos</h3>
+                            <p>Projeto construido para treinar a insercao de videos</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit perferendis eius eaque, ea voluptate obcaecati doloremque impedit veritatis repudiandae excepturi pariatur aliquam autem quisquam necessitatibus facilis placeat sint voluptates non.</p>
+                            </details>
+                        </div>
+                    </div> <!-- fim do projeto um-->
+
+                    <div class="projeto"> <!--projeto dois-->
+                        <img src="imagens/projeto-02-cordel.jpg" alt="projeto dois" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2023</p>
+                            <h3 class="titulo">Projeto de videos</h3>
+                            <p>Projeto construido para treinar a insercao de videos</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit perferendis eius eaque, ea voluptate obcaecati doloremque impedit veritatis repudiandae excepturi pariatur aliquam autem quisquam necessitatibus facilis placeat sint voluptates non.</p>
+                            </details>
+                        </div>
+                    </div> <!-- fim do projeto dois-->
+
+                    <div class="projeto"> <!--projeto um-->
+                        <img src="imagens/projeto-03-android.jpg" alt="projeto tres" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de videos</h3>
+                            <p>Projeto construido para treinar a insercao de videos</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit perferendis eius eaque, ea voluptate obcaecati doloremque impedit veritatis repudiandae excepturi pariatur aliquam autem quisquam necessitatibus facilis placeat sint voluptates non.</p>
+                            </details>
+                        </div>
+                    </div> <!-- fim do projeto um-->
+                </div>
             </aricle> <!-- fim article#projetos -->
         </section>
     </main>
     <footer>
-
+        Portfolio desenvolvido por <a href="#">Curso em video</a> em 2025
     </footer>
 </body>
 </html>
+
 
 
 
